<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clPopup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_teal">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="#19FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPopupMessage"></LinearLayout>

    <TextView
        android:id="@+id/tvPopupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/bg"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tvPopupMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPopupMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/message"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPopupTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCancelPopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg1"
        android:backgroundTint="#9CFFFFFF"
        android:text="@string/cancel"
        android:textColor="@color/dark_teal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toStartOf="@+id/btnDeletePopup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeletePopup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg1"
        android:backgroundTint="#9CFFFFFF"
        android:text="@string/delete"
        android:textColor="@color/dark_teal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCancelPopup"
        app:layout_constraintTop_toTopOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>