<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.NewPayTypeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg1"
        android:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <TextView
            android:id="@+id/textViewPPnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:gravity="start"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/payment_period"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toStartOf="@+id/textViewDnt"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eTvPayTypeTitleNT" />

        <TextView
            android:id="@+id/textViewDnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/day"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toTopOf="@+id/eTvDayNT"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toEndOf="@+id/textViewPPnt"
            app:layout_constraintTop_toBottomOf="@+id/eTvPayTypeTitleNT" />

        <EditText
            android:id="@+id/eTvPayTypeTitleNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/payment_type_tittle"
            android:textColorHint="@color/dark_teal"
            app:layout_constraintBottom_toTopOf="@+id/textViewPPnt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerPeriodNT"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveTypeNT"
            app:layout_constraintEnd_toEndOf="@+id/textViewPPnt"
            app:layout_constraintStart_toStartOf="@+id/textViewPPnt"
            app:layout_constraintTop_toTopOf="@+id/eTvDayNT" />

        <EditText
            android:id="@+id/eTvDayNT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveTypeNT"
            app:layout_constraintEnd_toEndOf="@+id/textViewDnt"
            app:layout_constraintStart_toStartOf="@+id/textViewDnt"
            app:layout_constraintTop_toBottomOf="@+id/textViewDnt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSaveTypeNT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/bg1"
            android:backgroundTint="#00695C"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDnt" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteNT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg1"
            android:text="@string/delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnSaveTypeNT"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/btnSaveTypeNT"
            app:layout_constraintTop_toBottomOf="@+id/btnSaveTypeNT"
            app:layout_constraintVertical_bias="0.45999998" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>